Combine ufo and cloud images; Fix padding on mobile for the home page connect section

--- a/src/main/content/_assets/css/home.css
+++ b/src/main/content/_assets/css/home.css
@@ -482,13 +482,6 @@
     margin-bottom: 25px;
 }
 
-#collaborate_community_ufo {
-    position: absolute;
-    z-index: 2;
-    margin-top: 10px;
-    margin-left: 65px;
-}
-
 
 @media (max-width: 767px) {
 
@@ -498,34 +491,13 @@
         padding-bottom: 50px;
     }
 
-    #collaborate_community_images {
-        margin-top: 100px;
-    }
-
-    #collaborate_community_ufo, #collaborate_community_clouds {
-        width: 300px;
-        margin: auto;
-    }
-
-    #collaborate_community_ufo {
-        margin-left: 40px;
-    }
-
-    #collaborate_community_clouds {
-        margin-right: 40px;
-    }
-
     #collaborate_image {
         padding: 20px;
     }
 
     #collaborate_get_involved {
         margin-top: 200px;
-    }
-
-    #get_involved_images {
-        margin-top: 100px;
-    }   
+    }  
 }
 
 
